--- a/src/assets/icon/demo_fontclass.html
+++ b/src/assets/icon/demo_fontclass.html
@@ -49,6 +49,12 @@
                 </li>
             
                 <li>
+                <i class="icon fontFamily el-icon-spa-eye"></i>
+                    <div class="name">关闭-眼睛</div>
+                    <div class="fontclass">.el-icon-spa-eye</div>
+                </li>
+            
+                <li>
                 <i class="icon fontFamily el-icon-spa-shezhiyong"></i>
                     <div class="name">设置用</div>
                     <div class="fontclass">.el-icon-spa-shezhiyong</div>
