--- a/src/assets/icon/demo_unicode.html
+++ b/src/assets/icon/demo_unicode.html
@@ -69,6 +69,12 @@
                 </li>
             
                 <li>
+                <i class="icon fontFamily">&#xe6e3;</i>
+                    <div class="name">关闭-眼睛</div>
+                    <div class="code">&amp;#xe6e3;</div>
+                </li>
+            
+                <li>
                 <i class="icon fontFamily">&#xe65d;</i>
                     <div class="name">设置用</div>
                     <div class="code">&amp;#xe65d;</div>
