--- a/src/assets/icon/demo_symbol.html
+++ b/src/assets/icon/demo_symbol.html
@@ -77,6 +77,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#el-icon-spa-eye"></use>
+                    </svg>
+                    <div class="name">关闭-眼睛</div>
+                    <div class="fontclass">#el-icon-spa-eye</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#el-icon-spa-shezhiyong"></use>
                     </svg>
                     <div class="name">设置用</div>
